fix: some spacing and adding flox logo in footer

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -276,6 +276,7 @@ body > .container > .content {
 /* Location Section */
 .location-section {
     position: relative;
+    margin-top: 6em;
 }
 
 .location-bg {
@@ -314,7 +315,8 @@ body > .container > .content {
 /* Speakers Section */
 
 .speakers-section {
-    margin-top: 6em;
+    margin-top: -4em;
+    padding-top: 4em;
     padding-bottom: 4em;
     position: relative;
     background: #000000;
@@ -322,10 +324,7 @@ body > .container > .content {
         0deg,
         rgba(0, 0, 0, 0) 0%,
         rgba(0, 0, 0, 0.4) 5%,
-        rgba(0, 0, 0, 1) 10%,
-        rgba(0, 0, 0, 1) 90%,
-        rgba(0, 0, 0, 0.4) 95%,
-        rgba(0, 0, 0, 0) 100%
+        rgba(0, 0, 0, 1) 10%
     );
 }
 
@@ -370,6 +369,10 @@ body > .container > .content {
 /* FAQ Section */
 .faq-section {
     margin: 2em 19% 0 19%;
+    padding-top: 4em;
+}
+.faq-content {
+    position: relative;
 }
 
 /* Footer */
